@@ -1,5 +1,6 @@
 3.1.9
 	Fix again an accept-all-bug when built with SPF (AIDA Shinra)
+	Fix macro handling in ACL (AIDA Shinra)
 3.1.8
 	Allow filtering on the HELO string
 	Back out previous SPF fix, it caused accept-all with SPF-less builds
